# ImageCodex

./: .gitignore  README.md  pyproject.toml  run_app.py  test_api.py
src/: app.py  graph.py  prompts.py
src/agents/: __init__.py  context_engineer.py  film_story_writer.py  image_generator.py  inspector.py  inspiration_agent.py  prompt_engineer.py  reference_agent.py  refiner.py  script_expert.py  storyboard_artist.py  storytelling_agent.py  utils.py  video_director.py  visual_analyst.py
src/core/: graph.py  prompts.py  schemas.py
src/graph/: __init__.py  graphs.py
src/ui/: __init__.py  stage3_ui.py  stage4_ui.py  visual_prompting_ui.py
