[project]
name = "visionprompt-agent"
version = "0.1.0"
description = "an agentic visual prompt engineer"
authors = [
    {name = "deepak",email = "deepak201298.s@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "langgraph (>=0.5.1,<0.6.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
