# pyproject.toml

[tool.poetry]
name = "visionprompt-agent"
version = "0.1.0"
description = "An creative agentic visual prompt engineering engine"
authors = ["deepak <deepak201298.s@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0" # Changed from 3.13 to 3.10 for wider compatibility
streamlit = ">=1.34.0" # Loosened version for stability
langgraph = ">=0.0.48"
langchain = ">=0.1.0"
langchain-openai = ">=0.1.0"
python-dotenv = ">=1.0.0"
pillow = ">=10.0.0"
langchain-core = ">=0.1.52"
pydantic = ">=2.7.0"
replicate = "^0.29.0" # <-- This is the new, correctly formatted dependency

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"